kubernetes/mage-deployment-sedimark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mage-api-sedimark-deployment
  namespace: cjarcau
  labels:
    app: mage-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mage-api-sedimark
  template:
    metadata:
      labels:
        app: mage-api-sedimark
    spec:
      containers:
      - name: mage-api-sedimark
        image: scr4pp/mage-api:arm6
        ports:
        - name: api-sedimark
          containerPort: 8000
        imagePullPolicy: IfNotPresent
