kubernetes/mage-service-sedimark.yaml
apiVersion: v1
kind: Service
metadata:
  name: mage-api-sedimark-service
  namespace: cjarcau
spec:
  selector:
    app: mage-api-sedimark
  ports:
    - name: api-sedimark
      protocol: TCP
      port: 49149
      targetPort: api-sedimark
  type: ClusterIP
