kubernetes/mage-ingress-sedimark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mage-api-sedimark-ingress
  namespace: cjarcau
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /mage/$2
spec:
  rules:
    - http:
        paths:
          - path: /mage-sedimark(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mage-api-sedimark-service
                port:
                  number: 49149
  ingressClassName: nginx
